--- a/style.css
+++ b/style.css
@@ -5,46 +5,152 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Hind', sans-serif;
-  /* background-color: var(--secondary-color); */
+  background-color: var(--secondary-color);
 
 }
 :root {
   --secondary-color: #151226;
-  --contrast-color: #64523f;
+  --contrast-color: #7c746b;
 }
 /* The navigation bar  */
 #navbar{
   position: fixed;
-  z-index: 1;
   background-color:var(--contrast-color);
   width: 100%;
-  height: 10%;
+  height: 15%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  opacity: 0.5;
 
 }
 /* The nav-elements  */
-#nav-container{
+ #nav-container{
   display: flex;
+  justify-content: space-around;
   list-style: none;
+  background-color:var(--contrast-color);
+
+}
+@media only screen and (max-width:375px){
+ #nav-container{
+   display: flex;
+   flex-direction: row;
+ }
+  
+}
+
+li.nav-links {
+  background-color:var(--contrast-color);
+
 }
 /* The nav-links  */
 .nav-links a{
   text-decoration: none;
   margin: 2em;
   color: #fff;
+  background-color:var(--contrast-color);
+
 }
 .nav-links a:hover{
   background-color:var(--secondary-color);
-  padding: 1.5em;
   color: #fff;
 
+}
+/* The button in the home section  */
+.btn{
+  color:#fff;
+  padding: 0.5em 1.5em;
+  margin-top: 1em;
+  border-radius: 2em;
+  border:1px solid #fff;
+  font-weight: 500;
+} 
+.btn:hover{
+  background-color: #fff;
+  color: var(--secondary-color);
 }
 /* The welcome section  */
 #welcome-section{
   height: 100vh;
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
 }
+/* The paragraph with the button in the welcome section  */
 
+.title{
+  padding: 5em;
+  color: #fff;
+  font-weight: 500;
+  font-size: 25px;
+}
+.container_img{
+  width: 30em;
+ margin: 3em 1em 1em 6em;
+ border-radius: 2em 1em 5em;
+}
+/* The about section with my image and a brief description of myself */
+#about{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
+  height: 100vh;
+}
+.my-photo{
+  width: 30em;
+  margin-left:20em ;
+  opacity: 7;
+}
+#container{
+  opacity: 3;
+  color: #fff;
+  padding: 4em;
+}
+/* The skills section  */
+#skills{
+  color: #fff;
+  margin-top: 5em;
+  height: 100vh;
+
+}
+section{
+  height: 100vh;
+
+}
+ h2{
+  text-align: center;
+  margin-bottom: 3em;
+  color: #fff;
+  margin-top: 5em;
+
+}
+.icons{
+  display: flex;justify-content: space-around;
+
+}
+/* The section with my enlisted projects  */
+.project-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  grid-gap:2px;
+  padding: 3em;
+}
+.project-img{
+  width: 25em;
+  border-radius: 2em;
+}
+/* The contact section in the footer  */
+.social-links{
+display: flex;
+justify-content: space-around;
+color: #fff;
+align-items: center;
+cursor: pointer;
+
+}
+#contact {
+  height: 20%;
+  padding:5em;
+}
