--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: 'Hind', sans-serif;
   background-color: var(--secondary-color);
+  scroll-behavior: smooth;
 
 }
 :root {
@@ -109,9 +110,17 @@ li.nav-links {
 /* The skills section  */
 #skills{
   color: #fff;
-  margin-top: 5em;
-  height: 100vh;
+  height: 50vh;
 
+}
+.icon-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.icon-container p{
+  font-size: 1.5em;
 }
 section{
   height: 100vh;
@@ -121,7 +130,7 @@ section{
   text-align: center;
   margin-bottom: 3em;
   color: #fff;
-  margin-top: 5em;
+  margin-top: 2em;
 
 }
 .icons{
@@ -132,25 +141,50 @@ section{
 .project-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   align-items: center;
   justify-content: center;
   grid-gap:2px;
   padding: 3em;
+  height: 100vh;
+
+
+}
+#projects{
+  margin-bottom: 14em;
 }
 .project-img{
   width: 25em;
   border-radius: 2em;
+  border: 3px solid var(--contrast-color) ;
 }
 /* The contact section in the footer  */
 .social-links{
 display: flex;
 justify-content: space-around;
 color: #fff;
+padding-bottom: 4em;
 align-items: center;
-cursor: pointer;
+}
+#contact{
+  height: 20%;
+  z-index: 1;
+  border-top: 1px solid var(--contrast-color);
+  height: 1vh;
+
 
 }
-#contact {
-  height: 20%;
-  padding:5em;
+.social{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.social .fab{
+  color: #fff;
+  font-size: 2em;
+}
+.social .fab:hover{
+  color:var(--contrast-color);
+
 }
